test/Fail/BadMacroDef.err
BadMacroDef.agda:4.8-19: error: [Syntax.BadMacroDef]
Data types are not allowed in macro blocks
